Refactor how containers are implemented and exposed as capabilities on itemstacks to properly use the data component system